table bloat, mvcc in postgres

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://andyweb.ru
 title: Блог web-программиста
-subtitle: 
+subtitle:
 author: Андрей (@DrAndyHunter)
 simple_search: http://google.com/search
 description:
@@ -90,11 +90,13 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: web-programmer
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
+
+yandex_metrica_tracking_id: 22450456
 
 # Facebook Like
 facebook_like: false
